--- a/lesson5-semantics-aria/03-first-steps/checkboxes.html
+++ b/lesson5-semantics-aria/03-first-steps/checkboxes.html
@@ -13,10 +13,10 @@
 
       <h2>Custom checkboxes</h2>
 
-      <div tabindex="0" class="checkbox" checked>
+      <div tabindex="0" role="checkbox" aria-checked="true" checked>
         Tim-Tams
       </div>
-      <div tabindex="0" class="checkbox">
+      <div tabindex="0" role="checkbox" aria-checked="false">
         Mint slices
       </div>
 
@@ -24,13 +24,13 @@
 
       <div>
         <label>
-          <input type="checkbox" checked>
+          <role="checkbox" aria-checked="true" checked>
           Tim-Tams
         </label>
       </div>
       <div>
         <label>
-          <input type="checkbox">
+          <irole="checkbox" aria-checked="falso">
           Mint slices
         </label>
       </div>
